--- a/apps/admin-portal/pages/styles.css
+++ b/apps/admin-portal/pages/styles.css
@@ -37,10 +37,10 @@ html {
   scroll-behavior: smooth;
 }
 * {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
 }
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Poppins', sans-serif;
   line-height: inherit;
   margin: 0;
 }
